--- a/style.css
+++ b/style.css
@@ -23,7 +23,12 @@ body {
     margin: 0;
     font-family: 'NM', sans-serif;
     src: url(./NM.woff) format('woff');
+    scroll-behavior: smooth;
   }
+
+html {
+  scroll-behavior: smooth;
+}
   
   h3 {
     color: #000000;
@@ -34,6 +39,11 @@ body {
     font-size: 16px;
     margin: 0;
     font-family: 'NMRegular';
+  }
+
+  .line a {
+    color: inherit;
+    text-decoration: none;
   }
 
   .hero {
@@ -49,17 +59,34 @@ body {
 
   .nav {
     display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding-left: 40px;
-    padding-right: 50px;
-    width: 90%;
-    background-color: #E8E8E8;
-    padding-top: 20px;
-    padding-bottom: 20px;
-    border-radius: 90px;
-    background-color: #E8E8E8;
-    opacity: 0.8;
+align-items: center;
+justify-content: space-between;
+padding-left: 40px;
+padding-right: 50px;
+width: 75%;
+padding-top: 20px;
+padding-bottom: 20px;
+border-radius: 90px;
+background-color: rgba(232, 232, 232, 0.55);
+backdrop-filter: blur(3.5px);
+-webkit-backdrop-filter: blur(3.5px);
+position: fixed;
+opacity: 1;
+z-index: 10;
+  }
+
+  .nav1 {
+    display: flex;
+align-items: center;
+justify-content: space-between;
+padding-left: 40px;
+padding-right: 50px;
+width: 75%;
+padding-top: 20px;
+padding-bottom: 20px;
+border-radius: 90px;
+opacity: 0;
+visible: 0;
   }
 
   .logosvg {
@@ -78,6 +105,7 @@ body {
     align-items: flex-start;
     gap: 5px;
     line-height: 1.2;
+    justify-content: space-between;
   }
 
   .line h2 {
@@ -556,6 +584,8 @@ body {
   .footercont {
     width: 85%;
     height: 65vh;
+    padding-bottom: 50px;
+    border-bottom: 1px solid slategrey;
   }
 
   .footerleft {
@@ -594,7 +624,7 @@ body {
 
   .pricingcard {
     border-radius: 25px;
-    background-image: url(backgroundd.jpg);
+    background-color: dimgrey;
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center center;
@@ -697,4 +727,57 @@ body {
   .ffeatures svg {
     width: 25px;
     height: 25px;
+  }
+
+  .footertext {
+    width: 80%;
+    height: fit-content;
+    padding-top: 75px;
+  }
+
+  .footertext h1 {
+    color: gray;
+    text-align: center;
+    font-size: 48px;
+    font-family: 'NMRegular';
+  }
+
+  .legal h2 {
+    font-size: 14px;
+  }
+
+  .legal {
+    display: flex;
+    justify-content: space-between;
+    width: 90%;
+    padding-bottom: 50px;
+  }
+
+  .legalleft {
+    display: flex;
+    gap: 10px;
+  }
+
+  .contacto {
+    width: 100%;
+    height: 60vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    gap: 50px;
+  }
+
+  .contacttext {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    width: 100%;
+    height: fit-content;
+  }
+
+  .contacttext h1 {
+    margin: 0;
   }
